fix: update margin-top for product details on mobile view

--- a/src/modules/products/ui/product-details/product-details.module.scss
+++ b/src/modules/products/ui/product-details/product-details.module.scss
@@ -37,7 +37,7 @@
     flex-direction: column;
     align-self: center;
     width: 95%;
-    // margin-top: -50px;
+    margin-top: -15px;
   }
 }
 
